# 901-sm

./: .gitignore  01_download_video.py  02_process_video.py  03_annotate_video.py  04_clean_alerts.py  README.md  index.html  main.py  pyproject.toml
css/: styles.css
js/: script.js
website/: index.html
website/js/: script.js
