[project]
name = "901-sm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "torch>=2.0.0,<2.3",
    "ultralytics>=8.3.167",
    "yt-dlp>=2025.6.30",
]
